# netcam-aioeos

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tasks.py
netcam_aio_devices/: __init__.py  register.py
netcam_aio_devices/design_services/: __init__.py
netcam_aio_devices/eos/: __init__.py  eos_device.py  eos_dut.py  eos_tc_device_info.py  eos_tc_interfaces.py  eos_tc_transceivers.py  eos_xcvr_matching.py
netcam_aio_devices/testing_services/: __init__.py
netcam_aioeos/: .pre-commit-config.yaml  __init__.py  eos_config.py  eos_dcfg.py  eos_dut.py  eos_dut_supports.py  eos_get_dcfg.py  eos_get_dut.py  eos_init.py  eos_plugin_config.py  eos_plugin_globals.py  eos_plugin_init.py  eos_svc_registry.py  init.py  netcam_design_service.py
netcam_aioeos/bgp_peering/: __init__.py  eos_check_bgp_peering_defs.py  eos_checks_bgp_peering.py  eos_checks_bgp_routers.py
netcam_aioeos/config/: eos_dcfg.py  eos_get_dcfg.py
netcam_aioeos/eos/: eos_check_vlans.py  eos_dut.py  eos_tc_cabling.py  eos_tc_device_info.py  eos_tc_interfaces.py  eos_tc_ipaddrs.py  eos_tc_lags.py  eos_tc_mlags.py  eos_tc_switchports.py  eos_tc_transceivers.py  eos_tc_vlans.py
netcam_aioeos/topology/: __init__.py  eos_check_cabling.py  eos_check_device_info.py  eos_check_interfaces.py  eos_check_ipaddrs.py  eos_check_lags.py  eos_check_mlags.py  eos_check_topology_design_service.py  eos_check_transceivers.py  eos_xcvr_matching.py
netcam_aioeos/vlans/: __init__.py  eos_check_switchports.py  eos_check_vlans.py  eos_checks_vlan_design_service.py
netcam_test_aiodevices/: __init__.py
netcam_test_aiodevices/eos/: __init__.py  eos_dut.py  eos_tc_cabling.py  eos_tc_device_info.py  eos_tc_interfaces.py  eos_tc_ipaddrs.py  eos_tc_lags.py  eos_tc_mlags.py  eos_tc_switchports.py  eos_tc_transceivers.py  eos_tc_vlans.py
tests/: test_netcam_aio_devices.py
tests/eos/: test_eos_testcase_interfaces.py
tests/samples/: show-interfaces-switchports.json  show-vlan.json
(+20 files in other folders)
