[tool.poetry]
name = "netcam-aioeos"
version = "0.6.2"
description = "NetCAD/CAM - Arista EOS/eAPI asyncio driver"
readme = "README.md"
authors = ["Jeremy Schulman"]

[tool.poetry.dependencies]
   python = ">=3.10"
   netcad = ">=0.8.0"
   asyncssh = "*"
   pydantic-env = "*"
   aio-eapi = ">=0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]
