[tool.poetry]
name = "netcam-aioeos"
version = "0.9.0"
description = "NetCAD/CAM - Arista EOS/eAPI asyncio driver"
readme = "README.md"
authors = ["Jeremy Schulman"]

[tool.poetry.dependencies]
   python = ">=3.10"
   netcad = ">=0.20.0"
   pydantic-env = ">=0.3.0"
   aio-eapi = ">=0.6.0"
   asyncssh = "^2.14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]

[tool.ruff]
    # Set the maximum line length to 132.
    # line-length = 132
    lint.ignore = ["E731"]

[tool.ruff.lint.extend-per-file-ignores]
    "__init__.py" = ["F401", "E402"]
